tests/baselines/reference/ES5SymbolProperty7.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty7.ts(4,6): error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.


==== tests/cases/conformance/Symbols/ES5SymbolProperty7.ts (1 errors) ====
    var Symbol: { iterator: any };
    
    class C {
        [Symbol.iterator]() { }
         ~~~~~~~~~~~~~~~
!!! error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.
    }
    
    (new C)[Symbol.iterator]